# tech-challenge-01

./: .env.exemple  .gitignore  Dockerfile  Procfile  README draft.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  scrapping.py
api/: main.py
api/controllers/: books.py  categories.py
app/: main.py
app/controllers/: auth.py  books.py  categories.py  health_check.py  insights.py  machine_learning.py  users.py  web_scrapping.py
app/core/: database.py  routers.py  settings.py
app/data/: model.pkl
app/dtos/: access_token.py  authentication.py  category_insigth.py  create_user_dto.py  refresh_token.py
app/models/: __init__.py  book.py  category.py  user.py
app/services/: auth_service.py  book_service.py  category_service.py  health_service.py  ml_service.py  user_service.py  web_scraping.py
app/utils/: filter.py  http_manager.py
config/: variables.py
data/: books.db-journal
doc/: plano.md
modules/utils/: functions.py
setup/: requirement.txt
src/api/: app.py  swt.py
src/config/: variables.py
src/modules/utils/: functions.py  livro_dao.py
src/scripts/: scrapping.py  t.py  teste.py
