[project]
name = "tech-challenge-01"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Sousa"}
]
readme = "README.md"
requires-python = "3.13.7"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "uvicorn[standard] (>=0.36.0,<0.37.0)"
]

[tool.poetry]
packages = [
    { include = "app" }
]